--- a/unit_1/CSS/style.css
+++ b/unit_1/CSS/style.css
@@ -1,6 +1,106 @@
 body {
-	background-color: beige;
+	background: rgb(21,21,24);
 }
-h1, p {
-	color:green;
+h1, h2, p {
+	color:white;
+	text-align: center;
+	font-family: Arial, sans-serif;
+}
+div {
+
+	width: 400px;
+	height: 300px;
+	border: 2px transparent;
+	display: inline-block;
+	margin: 20px;
+}
+img {
+	margin: 40px 0px 0px 0px;
+	border: 7px solid gray;
+	border-radius: 20px;
+}
+header {
+	background-image: url("background.jpg");
+	background-size: cover;
+	text-align: center;
+
+}
+a {
+	color: white;
+	text-decoration: none;
+
+}
+li {
+	display: inline;
+  	padding: 0px 10px 0px 10px;
+
+}
+ul {
+	padding: 10px;
+	background: black;
+	text-align: center;
+}
+/*resize images*/
+.logo img {
+	width: 150px;
+	height: 150px;
+}
+.december img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.january img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.february img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.march img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.april img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.may img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.june img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.july img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.august img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.september img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.october img {
+	width: 100%;
+	height: 100%;
+}
+/*resize images*/
+.november img {
+	width: 100%;
+	height: 100%;
 }
