--- a/unit_1/CSS/style.css
+++ b/unit_1/CSS/style.css
@@ -41,66 +41,66 @@ ul {
 	text-align: center;
 }
 /*resize images*/
-.logo img {
+#logo img {
 	width: 150px;
 	height: 150px;
 }
-.december img {
+#december img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.january img {
+#january img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.february img {
+#february img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.march img {
+#march img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.april img {
+#april img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.may img {
+#may img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.june img {
+#june img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.july img {
+#july img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.august img {
+#august img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.september img {
+#september img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.october img {
+#october img {
 	width: 100%;
 	height: 100%;
 }
 /*resize images*/
-.november img {
+#november img {
 	width: 100%;
 	height: 100%;
 }
