--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,30 +1,55 @@
 * { margin:0; padding:0; box-sizing:border-box; }
 body {
-	font-size: 20px;
+	font-size: 30px;
+	background: url(../photos/spring.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	max-height: 1150px;
 }
-h1 {
-	padding:25% 0 0 25%;
-	text-align: center;
+section {
+	border: none;
+	margin: 200px 0px 400px 0px;
+	color: #85129C;
+}
+p {
+	text-align: left;
+	margin: 100px 50px;
 }
 li {
 	text-align: left;
 	font-style: italic;
-	padding: auto;
+	margin: 0px 100px;
+	color: darkblue;
+	text-decoration: underline;
 }
 ul {
 	text-align: center;
-	list-style-type: none;
-	padding: 10px 10px 10px 10px;
+
+}
+img {
+	width: 200px;
+	height: 125px;
+	position: relative;
+   	top: 50%;
+   	margin: 50px;
+}
+#name {
+	color: white;
+	margin: 0px 0px 100px 0px;
+	text-align: center;
+	padding: 125px 0 125px 0;
 }
 #slogan {
 	font-style: italic;
 	text-align: center;
 	font-weight: bold;
+	color: white;
+	font-size: 20px;
+	margin: 2px;
+}
+#contact {
+	text-align: top;
 	font-size: 20px;
 }
-#photo {
-    background: url(../photos/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:90vh;
-}
+
