--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -27,6 +27,7 @@ div {
 	background: rgb(166,204,56);
 	margin: 1em 15em;
 	display: block;
+	width: 400px;
 }
 strong {
 	font-variant: small-caps;
