--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -3,6 +3,149 @@ body {
 	background: #212124;
 	color:white;
 	font-family: Arial, sans-serif;
+	font-size: 16px;
+}
+header {
+	text-align: center;
+}
+h1, h2 {
+	text-transform: uppercase;
+	font-weight: 800px;
+	color: white;
+}
+h1 {
+	font-size: 2em;
+}
+h2 {
+	font-size: 1.5em;
+}
+nav {
+	background-color: darkred; 
+	position: relative;
+	clear: both;
+}
+ul {
+	list-style: none;
+	padding: 0;	
+	margin: 0;
+}
+li {
+  	padding: 10px 10px;
+	text-align: center;
+	float: left;
+	text-align: center;
+}
+a {
+	color: white;
+	padding: 1em 0 0 0;
+}
+nav {
+	font-size: 1.8em;
+	float: center;
+	margin: 0 0 3em 0;
+	display: block;
+	height: 70px;
+	text-align: center;
+	clear: both;
+}
+img {
+	display: block;
+	height: 100px;
+	width: 75px;
+	margin: 10px;
+	float: left;
+}
+div {
+	background:darkred;
+	padding: 2em;
+	width: 300px;
+	height: auto;
+}
+#one, #three {
+	top: 25%;
+	left: 20%;
+	position: absolute;
+}
+#two, #four {
+	bottom: 25%;
+	right: 20%;
+	position: absolute;
+}
+#we {
+	height: 50px;
+	width: 50px;
+	margin: 0 0 10px 0;
+}
+#intro {
+	height: 25vh;
+	position:relative;
+	margin: 1em 0;
+	width: 800px;
+	text-align: center;
+}
+#winter {
+	height: 95vh;
+	position:relative;
+	margin: 1em 0;
+	background:url(../photos/december.jpg);
+	background-size: cover;
+	background-repeat:no-repeat;
+}
+#spring {
+	height: 95vh;
+	position:relative;
+	margin: 1em 0;
+	background:url(../photos/april.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+}
+#summer {
+	height: 95vh;
+	position:relative;
+	margin: 1em 0;
+	background:url(../photos/summer2.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+#fall {
+	height: 95vh;
+	position:relative;
+	margin: 1em 0;
+	background:url(../photos/fall2.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+}
+#column-left{
+	float: left;
+	width: 30%;
+	display: inline;
+	padding: 0 0 2em 1em;
+	height: 5em;
+}
+#column-center{
+	width: 30%;
+	display: inline;
+	float: left;
+	padding: 0 0 2em 1em;
+	height: 5em;
+}
+#column-right{
+	float: left;
+	width: 30%;
+	display: inline;
+	background-color: green;
+	padding: 0 0 2em 1em;
+	height: 5em;
+}
+#container {
+	clear: both;
+}
+#fb, #twitter, #pinterest, #linkedin, #home, #phone, #mail, #apple, #android, #windows {
+	display: inline;
+	width: 30px;
+	height: 30px;
+	padding: 0;
+	margin: 0;
 }
 #winter-main {
 	background: url(../photos/winter.jpg);
@@ -20,68 +163,12 @@ body {
 	background: url(../photos/fall.jpg);
 	background-position: cover;
 }
-section {
-	height:95vh;
-	position:relative;
-}
-img{
-	border: 1px solid white;
-	border-radius: 20px;
-
-}
-div {
-	background:rgba(190,2,26,.8);
-	background: rgba(247,163,80,.8);
-	background: darkred;
-	padding:2em;
-	width: 300px;
-	height: auto;
-	position:absolute;
-	top:25%;
-	left:25%;
-	display: inline-block;
-
-}
-header {
+#footer {
+	background-color: darkred;
+	font-style: italic;
+	font-family: Georgia, serif;
+	padding: 1em;
 	text-align: center;
+	clear: both;
+	margin: 0;
 }
-a {
-	text-decoration: none;
-}
-li {
-	display: inline;
-  	padding: 0px 10px 0px 10px;
-	text-align: center;
-}
-ul {
-	padding: 10px;
-	
-}
-#winter {
-	background:url(../photos/december.jpg);
-	background-size:cover;
-	background-repeat:no-repeat;
-}
-#spring {
-	background:url(../photos/april.jpg);
-	background-size:cover;
-	background-repeat:no-repeat;
-}
-#summer {
-	background:url(../photos/july.jpg);
-	background-size:cover;
-	background-repeat:no-repeat;
-}
-#fall {
-	background:url(../photos/november.jpg);
-	background-size:cover;
-	background-repeat:no-repeat;
-}
-/*resize images*/
-#logo img {
-	width: 150px;
-	height: 100px;
-	display: inline;
-  	padding: 0px 10px 0px 10px;
-}
-
