--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -61,6 +61,15 @@ div {
 	width: 300px;
 	height: auto;
 }
+footer {
+	background-color: darkred;
+	font-style: italic;
+	font-family: Georgia, serif;
+	padding: 1em;
+	text-align: center;
+	clear: both;
+	margin: 0;
+}
 #one, #three {
 	top: 25%;
 	left: 20%;
@@ -115,36 +124,28 @@ div {
 	background-size:cover;
 	background-repeat:no-repeat;
 }
-#column-left{
+.column{
 	float: left;
 	width: 30%;
 	display: inline;
 	padding: 0 0 2em 1em;
-	height: 5em;
+	height: auto;
 }
-#column-center{
+.column-center{
 	width: 30%;
 	display: inline;
 	float: left;
 	padding: 0 0 2em 1em;
-	height: 5em;
+	height: auto;
 }
-#column-right{
-	float: left;
-	width: 30%;
-	display: inline;
-	background-color: green;
-	padding: 0 0 2em 1em;
-	height: 5em;
-}
-#container {
+.container {
 	clear: both;
 }
-#fb, #twitter, #pinterest, #linkedin, #home, #phone, #mail, #apple, #android, #windows {
+#fb, #twitter, #pinterest, #instagram, #home, #phone, #mail, #apple, #android, #windows, #share {
 	display: inline;
-	width: 30px;
-	height: 30px;
-	padding: 0;
+	width: 50px;
+	height: 50px;
+	padding: .5em;
 	margin: 0;
 }
 #winter-main {
@@ -163,12 +164,10 @@ div {
 	background: url(../photos/fall.jpg);
 	background-position: cover;
 }
-#footer {
-	background-color: darkred;
-	font-style: italic;
-	font-family: Georgia, serif;
-	padding: 1em;
-	text-align: center;
-	clear: both;
-	margin: 0;
-}
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+
+
