--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -46,6 +46,7 @@ nav {
 	display: block;
 	height: 70px;
 	text-align: center;
+
 }
 ul {
 	list-style: none;
@@ -53,7 +54,7 @@ ul {
 	margin: 0;
 }
 li {
-  	padding: 10px 10px;
+  	padding: 1% 6%;
 	text-align: center;
 	float: left;
 	text-align: center;
@@ -95,6 +96,9 @@ hr {
     margin-right: auto;
     border-style: inset;
     border-width: 1px;
+}
+#input {
+	padding: 2em;
 }
 #logo {
 	height: 130px;
@@ -157,20 +161,20 @@ hr {
 }
 .column{
 	float: left;
-	width: 30%;
+	width: 33%;
 	display: inline;
-	padding: 0 0 2em 2em;
+	padding: 0 2em 0 2em;
 	height: auto;
-	border-right: 5px solid white;
 	margin: auto;
 }
 .column-center{
-	width: 30%;
+	width: 33%;
 	display: inline;
 	float: left;
-	padding: 0 0 2em 2em;
+	padding: 0 2em 0 2em;
 	height: auto;
 	border-right: 5px solid white;
+	border-left: 5px solid white;
 }
 .container {
 	clear: both;
@@ -182,6 +186,7 @@ hr {
 	height: 50px;
 	padding: .5em;
 	margin: 0;
+	im
 }
 #winter-main {
 	background: url(../photos/winter2.jpg);
@@ -214,4 +219,13 @@ hr {
 	width: 250px;
 	background-color: green;
 	max-height: 550px;
+}
+.icons2 {
+	margin: 1em;
+	padding: 2em;
+	float: left;
+	width: 250px;
+	background-color: rgb(225,216,0) ;
+	max-height: 560px;
+	color: black;
 }
