--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -23,12 +23,14 @@ h1 {
 h2 {
 	font-size: 1.5em;
 	font-family: "Times New Roman" sans-serif;
+	text-align: center;
 }
 h3 {
 	padding: 1.5 .5 .5 0em;
 	font-size: 1em;
 	line-height: 1.5em;
 	font-family: fantasy;
+	text-align: center;;
 }
 h4 {
 	font-size: .75em;
@@ -189,22 +191,26 @@ hr {
 	im
 }
 #winter-main {
-	background: url(../photos/winter2.jpg);
-	background-position: cover;
+	background: url(../photos/winter.jpg);
+	background-size: cover;
 	color: black; 
 	text-decoration: none;
+	background-repeat: no-repeat;
 }
 #spring-main {
 	background: url(../photos/spring2.jpg);
-	background-position: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 #summer-main {
 	background: url(../photos/summer.jpg);
-	background-position: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 #fall-main {
 	background: url(../photos/fall.jpg);
-	background-position: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 .clearfix:after {
     content: ".";
@@ -217,7 +223,7 @@ hr {
 	padding: 2em;
 	float: left;
 	width: 250px;
-	background-color: green;
+	background-color: rgb(124,46,137);
 	max-height: 550px;
 }
 .icons2 {
@@ -225,7 +231,25 @@ hr {
 	padding: 2em;
 	float: left;
 	width: 250px;
-	background-color: rgb(225,216,0) ;
+	background-color: rgba(225,216,0,0.8) ;
+	max-height: 560px;
+	color: black;
+}
+.icons3 {
+	margin: 1em;
+	padding: 2em;
+	float: left;
+	width: 250px;
+	background-color: green;
+	max-height: 560px;
+	color: black;
+}
+.icons4 {
+	margin: 1em;
+	padding: 2em;
+	float: left;
+	width: 250px;
+	background-color: rgb(94,94,219);
 	max-height: 560px;
 	color: black;
 }
