--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -30,7 +30,7 @@ h3 {
 	font-size: 1em;
 	line-height: 1.5em;
 	font-family: fantasy;
-	text-align: center;;
+	text-align: center;
 }
 h4 {
 	font-size: .75em;
