--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -13,12 +13,12 @@ p {
 }
 h1, h2, h3, h4 {
 	text-transform: uppercase;
-	font-weight: 800px;
 	color: white;
 }
 h1 {
 	font-size: 2em;
 	padding: .5em;
+	text-align: center;
 }
 h2 {
 	font-size: 1.5em;
@@ -46,9 +46,8 @@ nav {
 	float: center;
 	margin: 0 0 3em 0;
 	display: block;
-	height: 70px;
+	height: 2.4em;
 	text-align: center;
-
 }
 ul {
 	list-style: none;
@@ -56,7 +55,7 @@ ul {
 	margin: 0;
 }
 li {
-  	padding: 1% 6%;
+  	padding: 1% 1.5em;
 	text-align: center;
 	float: left;
 	text-align: center;
@@ -71,13 +70,13 @@ img {
 	width: 100%;
 	margin: 0;
 	float: left;
-	border: 1px solid white;
+	border: .1em solid white;
 }
 
 div {
 	background:darkred;
 	padding: 2em;
-	width: 300px;
+	width: 20em;
 	height: auto;
 }
 footer {
@@ -97,40 +96,41 @@ hr {
     margin-left: auto;
     margin-right: auto;
     border-style: inset;
-    border-width: 1px;
+    border-width: .1em;
 }
 #input {
 	padding: 2em;
 }
 #logo {
-	height: 130px;
-	width: 100px;
-	margin: 10px;
+	height: 8em;
+	width: 6em;
+	margin: .5em;
+	border-radius: 8%;
 }
 #one, #three {
-	top: 25%;
-	left: 20%;
+	top: 15%;
+	left: 5%;
 	position: absolute;
 }
 #two, #four {
-	bottom: 25%;
-	right: 20%;
+	bottom: 20%;
+	right: 5%;
 	position: absolute;
 }
 #we {
-	height: 50px;
-	width: 50px;
-	margin: 0 0 10px 0;
+	height: 2em;
+	width: 2em;
+	margin: 0 0 .5em 0;
 }
 #intro {
-	height: 25vh;
+	height: 15em;
 	position:relative;
 	margin: auto;
-	width: 1000px;
+	width: 800px;
 	text-align: center;
 }
 #winter {
-	height: 95vh;
+	height: 40em;
 	position:relative;
 	margin: 1em 0;
 	background:url(../photos/december.jpg);
@@ -138,7 +138,7 @@ hr {
 	background-repeat:no-repeat;
 }
 #spring {
-	height: 95vh;
+	height: 40em;
 	position:relative;
 	margin: 1em 0;
 	background:url(../photos/april.jpg);
@@ -146,7 +146,7 @@ hr {
 	background-repeat:no-repeat;
 }
 #summer {
-	height: 95vh;
+	height: 40em;
 	position:relative;
 	margin: 1em 0;
 	background:url(../photos/summer2.jpg);
@@ -154,7 +154,7 @@ hr {
 	background-repeat: no-repeat;
 }
 #fall {
-	height: 95vh;
+	height: 40em;
 	position:relative;
 	margin: 1em 0;
 	background:url(../photos/fall2.jpg);
@@ -173,10 +173,10 @@ hr {
 	width: 33%;
 	display: inline;
 	float: left;
-	padding: 0 2em 0 2em;
+	padding: 0 2em 0 2em;  
 	height: auto;
-	border-right: 5px solid white;
-	border-left: 5px solid white;
+	border-right: .3em solid white;
+	border-left: .3em solid white;
 }
 .container {
 	clear: both;
@@ -188,7 +188,6 @@ hr {
 	height: 50px;
 	padding: .5em;
 	margin: 0;
-	im
 }
 #winter-main {
 	background: url(../photos/winter.jpg);
@@ -252,4 +251,84 @@ hr {
 	background-color: rgb(94,94,219);
 	max-height: 560px;
 	color: black;
+}
+@media only screen and (max-width: 768px) {
+	nav {
+	    float: none;
+	    display: inline; 
+	    background-color: darkred;
+  	}
+	li {
+		padding: 1% 2%
+	}	
+	h1 {
+		width: 100%;
+	}
+	h4 {
+	  	visibility: hidden; 
+	  	display: none; 
+	}  
+	h2 {
+		font-size: 1.5em;
+	  	text-align: center;
+	  	padding: 0;
+	  	margin: 0;
+	}
+	header {
+	  	background: darkred;
+	}
+	div {
+		height: auto;
+		font-size: 12px;
+		width: 17em;
+		padding: 1em;
+	}
+	a{
+		width: 80%;
+		background: none;
+	}	
+	#twitter, #pinterest, #facebook, #instagram {
+	  	float: left;
+	  	display: inline-block;
+	}
+	#intro, #container{
+	    font-size: 1em; 
+	    display: inline-block;
+	    width: auto;
+	    max-width: 768px;
+	}
+	#intro {
+	  	height: 10em;
+	}
+	#container {
+	  	height: 22em;
+	  	position: inherit;
+	  	padding: 2em 0;
+	}
+	#summer, #winter, #spring, #fall {
+		background-size: 100%;
+		height: 25em;
+
+}
+
+
+
+
+@media only screen and (max-width: 320px) {
+  nav {
+    float: none;
+  }	
+  nav {
+    float: none;
+  }
+  nav {
+    margin: 0 .5em 0 0;
+  }
+  img {
+  	width: 320px;
+  }
+  #about {
+    font-size: 1.4em;
+    line-height: 1.8em;
+  }
 }
