--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -303,32 +303,64 @@ hr {
 	#container {
 	  	height: 22em;
 	  	position: inherit;
-	  	padding: 2em 0;
+	  	padding: 2em 0 0 0;
 	}
 	#summer, #winter, #spring, #fall {
 		background-size: 100%;
 		height: 25em;
-
+	}	
 }
-
-
-
-
 @media only screen and (max-width: 320px) {
   nav {
-    float: none;
-  }	
-  nav {
-    float: none;
+    float: left;
+    margin: 0;
+    width: 100%;
+    display: inline-block;
   }
-  nav {
-    margin: 0 .5em 0 0;
+  h1 {
+  	font-size: 1.5em;
+  	line-height: 1.5em;
   }
-  img {
-  	width: 320px;
+  h2 {
+  	font-size: 1em;
+  	padding: 0 0 .4em 0;
   }
-  #about {
-    font-size: 1.4em;
-    line-height: 1.8em;
+    li { 
+  	width: auto;
+  	padding: 1em;
+    height: 2em;
+    line-height: 1.5em;
+    font-size: .5em;
+	}
+  p {
+  	visibility: hidden; 
+	display: none; 
   }
+  #summer, #winter, #spring, #fall {
+    background-size: 100%;
+    height: 13em;
+  }
+  .column-center {
+  	height: 100%;
+  }
+  #two, #four {
+    bottom: 20%;
+    right: 5%;
+    position: absolute;
+    width: 45%;
+   	font-size: 1.5em;
+  }
+  #one, #three {
+    top: 15%;
+    left: 5%;
+    position: absolute;
+    width: 45%;
+    font-size: 1.5em;
+	}
+  #container {
+  	height: 17em;
+  	position: inherit;
+  	padding: 2em 0 0 0;
+	}
+
 }
